--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ h1{
     padding-top: 5%;
     text-align: center;
     width:100%;
+    align-items: center;
 }
 
 #about p{
@@ -99,6 +100,7 @@ h3{
     text-align: center;
     color: darkslateblue;
     padding:1%;
+    
 }
 
 #projects p{
@@ -118,7 +120,7 @@ h4{
 }
 
 .swiper img{
-    width: 600px;
+    width: 100%;
 }
 
 .swiper-button-prev::after{
@@ -132,6 +134,10 @@ h4{
 #contact {
     padding-top: 50px;
     margin-bottom: 50px;
+}
+
+#contact p a{
+    color:darkslateblue;
 }
 
 h5{
@@ -227,7 +233,7 @@ h2 a:hover{
     color:palevioletred;
 }
 
-#text-block {
-    margin-left: 300px;
-    margin-right: 300px;
+#text-block p {
+    margin-left: 20%;
+    margin-right: 20%;
 }
