--- a/style.css
+++ b/style.css
@@ -100,6 +100,8 @@ h3{
     text-align: center;
     color: darkslateblue;
     padding:1%;
+    margin-left: 20%;
+    margin-right: 20%;
     
 }
 
